k8/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voting-ingress
  namespace: voting-app
  annotations:
    
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    # This ensures paths are handled correctly by the ALB
   
spec:
  ingressClassName: alb  #
  rules:
  - host: voting-cat.com
    http:
      paths:
            # Route /results path to the results dashboard
      - path: /results
        pathType: Prefix
        backend:
          service:
            name: result-rewrite
            port:
              name: use-annotation
      # Route root path to the voting frontend
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vote-service
            port:
              number: 80
