k8/result-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: results-ingress
  namespace: voting-app
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: "voting-app-shared"
    # Action annotation for path rewriting
    alb.ingress.kubernetes.io/actions.result-rewrite: '{"type":"forward","forwardConfig":{"targetGroups":[{"serviceName":"result-service","servicePort":80}]},"rewriteConfig":{"path":"/"}}'
spec:
  ingressClassName: alb
  rules:
  - host: voting-cat.com
    http:
      paths:
      - path: /results
        pathType: Prefix
        backend:
          service:
            name: result-rewrite
            port:
              name: use-annotation
